# packages/shared-types/src/index.ts
@@ -38,3 +38,23 @@ export type ValidationExecutionEvent = components['schemas']['ValidationExecutio
 export type ValidationExecutionEvidence = components['schemas']['ValidationExecutionEvidence'];
 export type ValidationExecutionReview = components['schemas']['ValidationExecutionReview'];
 export type ValidationTemplate = components['schemas']['ValidationTemplate'];
+export type VulnerabilityCase = components['schemas']['VulnerabilityCase'];
+export type VulnerabilityCaseCreate = components['schemas']['VulnerabilityCaseCreate'];
+export type VulnerabilityCasePatch = components['schemas']['VulnerabilityCasePatch'];
+export type VulnerabilityCaseDetail = components['schemas']['VulnerabilityCaseDetail'];
+export type CaseFinding = components['schemas']['CaseFinding'];
+export type CaseFindingCreate = components['schemas']['CaseFindingCreate'];
+export type RemediationProposal = components['schemas']['RemediationProposal'];
+export type RemediationProposalCreate = components['schemas']['RemediationProposalCreate'];
+export type RemediationDecision = components['schemas']['RemediationDecision'];
+export type RemediationDecisionCreate = components['schemas']['RemediationDecisionCreate'];
+export type RemediationImplementation = components['schemas']['RemediationImplementation'];
+export type RemediationImplementationCreate = components['schemas']['RemediationImplementationCreate'];
+export type RetestRequest = components['schemas']['RetestRequest'];
+export type RetestRequestCreate = components['schemas']['RetestRequestCreate'];
+export type ValidationComparison = components['schemas']['ValidationComparison'];
+export type CaseDisposition = components['schemas']['CaseDisposition'];
+export type CaseDispositionCreate = components['schemas']['CaseDispositionCreate'];
+export type CaseCloseRequest = components['schemas']['CaseCloseRequest'];
+export type CaseReport = components['schemas']['CaseReport'];
+export type CaseReportCreate = components['schemas']['CaseReportCreate'];
